--- a/src/app/apply-now-flow1/apply-now-flow1.component.html
+++ b/src/app/apply-now-flow1/apply-now-flow1.component.html
@@ -29,41 +29,31 @@
         <img class="car-card" src={{techDetailsParameter.image}}>
 
     </div>
-
-      <h5 class="card-title" style="font-family: 'Inter';"><b>Application ID: {{applicationId}}</b></h5>
-
-    <div class="package-details">
-        <p style="font-family: 'Monts';"><b>Your chosen package: </b></p>
-
-        <p style="font-family: 'Monts'; color: #ED5434;"><b>Your current instalment is: $1,420 per month</b></p>
-
-        <p style="font-family: 'Monts'; font-family: 'Inter';"><b>Your Total Amount of Finance &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $88,00</b></p>
-
-        <p style="font-family: 'Monts';">Down Payment &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $12,000</p>
-
-        <p style="font-family: 'Monts';">Repayment Frequency &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Monthly</p>
-
-        <p style="font-family: 'Monts';">APR of &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;7.9%</p>
-
-        <p style="font-family: 'Monts';">Add on (instalment) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$0</p>
-
-        <p style="font-family: 'Monts'; font-family: 'Inter';"><b>Your Final Instalment is &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$1,420</b></p>
-
-        <p style="font-family: 'Monts';">Your first payment is &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$14,420</p>
-
-        <p style="font-family: 'Monts'; color: #236AF2;"><b>Your monthly deduction starts from November 2023, every 1st of the month</b></p>
-
-    </div>
+            <h5 class="card-title" style="font-family: 'Inter'; text-align: center; font-size: 18px; color:#DB2423"><b>Application ID: UNE0348</b></h5>
+          <div class="d-flex pd" style="justify-content: space-between;">
+            <div class="package-details">
+                <p><b>Your chosen package:</b> </p>
+                <p style="color: #DB2423;"><b>Your current instalment is:</b></p>
+                <p ><b>Your Total Amount of Finance</b></p>
+                <p >Down Payment</p>
+                <p >Repayment Frequency </p>
+                <p >APR of</p>
+                <p >Add on (instalment)</p>
+                <p ><b>Your Final Instalment is</b></p>
+                <p >Your first payment is</p>
+            </div>
+            <div class="package-details">
+                <p><b>--</b> </p>
+                <p style="color: #DB2423;"><b>$14809 / month</b></p>
+                <p ><b>$8800</b></p>
+                <p >$12000</p>
+                <p >Monthly </p>
+                <p >7.9 %</p>
+                <p >$0</p>
+                <p ><b>$1,420</b></p>
+                <p >$14,420</p>
+            </div>
+        </div>
 
 </div>
 
