--- a/src/app/car-sub-redesign/car-sub-redesign.component.html
+++ b/src/app/car-sub-redesign/car-sub-redesign.component.html
@@ -164,37 +164,29 @@
                 <div class="left-card-right-side ms-3">
                     <div class="dropdown mt-2 d-flex select-variant" (click)="expandVariant()">
                         <h2>Select Variant</h2>
-                        <i class="fa-solid"
-                        [class.fa-angle-down]="isVariantExpand" [class.fa-angle-up]="!isVariantExpand"></i>
+                        <i class="fa-solid" [class.fa-angle-down]="isVariantExpand"
+                            [class.fa-angle-up]="!isVariantExpand"></i>
                     </div>
 
                     <div [style.display]="isVariantExpand ? 'inherit' : 'none'">
-                        <div class="color-div">
-                            <p class="mt-3">Color</p>
-                            <div class="color-picker" *ngFor="let item of colorList">
-                                <!-- <span class="dot" style="background-color: red; outline: solid 2px #ffffff;"
-                                (click)="outline($event)"></span>
-                                <span class="dot ms-2" style="background-color: #45473d; outline: solid 2px #ffffff;"
-                                (click)="outline($event)"></span>
-                                <span class="dot ms-2" style="background-color: black; outline: solid 2px #ffffff;"
-                                (click)="outline($event)"></span>
-                                <span class="dot ms-2" style="background-color: #dfdfdf; outline: solid 2px #ffffff;"
-                                (click)="outline($event)"></span> -->
-                                <!-- <button class="redbtn btn color{{item}}" style="outline: solid 2px #a38c8c;" ></button> -->
-                            </div>
-                            <div style="display: flex;">
-                                <div  *ngFor="let item of colorList">
-                                    <button class="dot redbtn color{{item}}" style="outline: solid 2px #a38c8c;" (click)="outline($event)" ></button>
-                                </div>
+                        <h1>hello</h1>
+                    </div>
+
+                    <div class="color-div">
+                        <p class="mt-3">Color</p>
+                        <div style="display: flex;">
+                            <div *ngFor="let item of colorList">
+                                <button class="dot redbtn color{{item}}" style="outline: solid 2px #a38c8c;"
+                                    (click)="outline($event)"></button>
                             </div>
                         </div>
+                    </div>
 
-                        <div>
-                            <h2 class="mt-3 accessories">Accessories <span>(optional)</span></h2>
-                            <div class="d-flex mt-3 my-2">
-                                <img class="speedometer" src="../../assets/logos/456.png" style="margin-right: 20px;">
-                                <img src="../../assets/logos/123.png">
-                            </div>
+                    <div>
+                        <h2 class="mt-3 accessories">Accessories <span>(optional)</span></h2>
+                        <div class="d-flex mt-3 my-2">
+                            <img (click)="addBorder()" id="speedometer" class="speedometer" src="../../assets/logos/456.png" style="margin-right: 20px;">
+                            <img (click)="addBorder2()" id="engine" src="../../assets/logos/123.png">
                         </div>
                     </div>
                 </div>
@@ -238,14 +230,39 @@
                     <p class='subhead'>Tenure <span class="text-secondary">(Months)</span></p>
                     <p style="font-weight: bold; font-size: 13px; color: grey; margin-top: -15px;">Select Preferred
                         Tenure</p>
-                    <div class="numbers">
-                        <button class="btn numbtn">24</button>
+                    <div class="numbers select-size">
+                        <!-- <button class="btn numbtn">24</button>
                         <button class="btn numbtn">36</button>
                         <button class="btn numbtn" style="border: solid 2px #DB2423; color: #DB2423;">48</button>
                         <button class="btn numbtn">60</button>
                         <button class="btn numbtn">72</button>
-                        <button class="btn numbtn">84</button>
+                        <button class="btn numbtn">84</button> -->
                         <!-- <button class="btn btn-white border border-1 border-black">84</button> -->
+                        <input class="numbtn" type="radio" name="s-size" id="small" />
+                        <input class="numbtn" type="radio" name="s-size" id="medium" />
+                        <input class="numbtn" type="radio" name="s-size" id="large" checked/>
+                        <input class="numbtn" type="radio" name="s-size" id="x-large" />
+                        <input class="numbtn" type="radio" name="s-size" id="xx-large" />
+
+                        <label for="small" class="option-text">
+                            <p>24</p>
+                        </label>
+                        <label for="medium" class="option-text">
+                            <p>36</p>
+                        </label>
+                        <label for="large" class="option-text">
+                            <p>48</p>
+                        </label>
+                        <label for="x-large" class="option-text">
+                            <p>60</p>
+                        </label>
+                        <label for="xx-large" class="option-text">
+                            <p>72</p>
+                        </label>
+                        <label for="xx-large" class="option-text">
+                            <p>84</p>
+                        </label>
+
                     </div>
 
 
@@ -262,7 +279,7 @@
                     </div>
 
 
-                    <p class='subhead'>Mileage Package</p>
+                    <!-- <p class='subhead'>Mileage Package</p>
                     <div class="radio-body">
                         <div class="form-check form-check-inline" style="margin-left: -18px;">
                             <input type="radio" name="radio3" value="value" class="radiobtn" checked>
@@ -276,7 +293,7 @@
                             <input type="radio" name="radio3" value="value" class="radiobtn">
                             <label class="form-check-label" for="inlineRadio2">High Usage</label>
                         </div>
-                    </div>
+                    </div> -->
 
 
                     <div class="d-flex" style="align-items: baseline;">
