--- a/src/app/workspace/workspace.component.html
+++ b/src/app/workspace/workspace.component.html
@@ -49,11 +49,9 @@
             <ag-grid-angular  style="width: 100%; height: 17.5rem; overflow: hidden;" class="ag-theme-alpine" [rowData]="rowData$ | async"
                 [columnDefs]="columnDefs" [defaultColDef]="gridOptions.defaultColDef" [rowHeight]="33" (cellClicked)="onCellClicked($event)">
             </ag-grid-angular>
-            <img src="../../assets/logos/frame.png" style="width: 60rem;     height: 1.2rem;
+            <img src="../../assets/logos/frame.png" style="width: 60rem; height: 1.2rem;
             width: 60rem;
-            margin-top: 0.5rem;
-        
-        ">
+            margin-top: 0.5rem;">
 
         </div>
         
