--- a/src/app/car-sub-redesign/car-sub-redesign.component.scss
+++ b/src/app/car-sub-redesign/car-sub-redesign.component.scss
@@ -718,6 +718,13 @@ datalist option {
 }
 
 .speedometer {
+    margin-right: 1rem;
+    height: 3rem;
+    width: 3rem;
+}
+
+#engine{
+    margin-right: 1rem;
     height: 3rem;
     width: 3rem;
 }
