car-sub-redesgin-select-variant-fixed

--- a/src/app/car-sub-redesign/car-sub-redesign.component.scss
+++ b/src/app/car-sub-redesign/car-sub-redesign.component.scss
@@ -794,3 +794,10 @@ datalist option {
 .option-text p{
     margin-top: 0.9rem;
 }
+
+.select-var-div{
+    font-family: Inter;
+    font-weight: 500;
+    font-size: 1rem;
+    margin-left: -2rem;
+}
