--- a/src/app/car-sub-redesign/car-sub-redesign.component.html
+++ b/src/app/car-sub-redesign/car-sub-redesign.component.html
@@ -168,8 +168,25 @@
                             [class.fa-angle-up]="!isVariantExpand"></i>
                     </div>
 
-                    <div [style.display]="isVariantExpand ? 'inherit' : 'none'">
-                        <h1>hello</h1>
+                    <div class="select-var-div" [style.display]="isVariantExpand ? 'inherit' : 'none'">
+                        <div class="d-flex radio-btn-group mt-3">
+                            <input class="ms-4 checked-radio" type="radio" name="warranty" id="specifyColor"
+                                checked="checked">
+                            <p class="mt-auto mb-auto ms-3">Standard</p>
+                        </div>
+                        <div class="d-flex radio-btn-group mt-3">
+                            <input class="ms-4 checked-radio" type="radio" name="warranty" id="specifyColor">
+                            <p class="mt-auto mb-auto ms-3">4x4</p>
+                        </div>
+                        <div class="d-flex radio-btn-group mt-3">
+                            <input class="ms-4 checked-radio" type="radio" name="warranty" id="specifyColor">
+                            <p class="mt-auto mb-auto ms-3">Turbo</p>
+                        </div>
+                        <div class="d-flex radio-btn-group mt-3">
+                            <input class="ms-4 checked-radio" type="radio" name="warranty" id="specifyColor">
+                            <p class="mt-auto mb-auto ms-3">Legender</p>
+                        </div>
+
                     </div>
 
                     <div class="color-div">
@@ -185,7 +202,8 @@
                     <div>
                         <h2 class="mt-3 accessories">Accessories <span>(optional)</span></h2>
                         <div class="d-flex mt-3 my-2">
-                            <img (click)="addBorder()" id="speedometer" class="speedometer" src="../../assets/logos/456.png" style="margin-right: 20px;">
+                            <img (click)="addBorder()" id="speedometer" class="speedometer"
+                                src="../../assets/logos/456.png" style="margin-right: 20px;">
                             <img (click)="addBorder2()" id="engine" src="../../assets/logos/123.png">
                         </div>
                     </div>
@@ -240,7 +258,7 @@
                         <!-- <button class="btn btn-white border border-1 border-black">84</button> -->
                         <input class="numbtn" type="radio" name="s-size" id="small" />
                         <input class="numbtn" type="radio" name="s-size" id="medium" />
-                        <input class="numbtn" type="radio" name="s-size" id="large" checked/>
+                        <input class="numbtn" type="radio" name="s-size" id="large" checked />
                         <input class="numbtn" type="radio" name="s-size" id="x-large" />
                         <input class="numbtn" type="radio" name="s-size" id="xx-large" />
 
