--- a/src/styles.scss
+++ b/src/styles.scss
@@ -104,3 +104,5 @@ body::-webkit-scrollbar-thumb {
     border-radius: 5px;       /* roundness of the scroll thumb */
     // border: 2px solid rgb(255, 255, 255);  /* creates padding around scroll thumb */
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
