--- a/src/app/car-sub-redesign/car-sub-redesign.component.html
+++ b/src/app/car-sub-redesign/car-sub-redesign.component.html
@@ -1,7 +1,7 @@
 <app-navbar-after-home-page [navtheme]="'whitetheme'"></app-navbar-after-home-page>
 <div class="car-subs">
     <div class="car-subs-header d-flex">
-        <p (click)="redirect('/home')">HOME</p>
+        <p (click)="redirect('/home')" style="cursor: pointer;">HOME</p>
         <img src="../../assets/logos/Vector.png">
         <p>POPULAR CARS</p>
         <img src="../../assets/logos/Vector.png">
@@ -262,7 +262,6 @@
                         <label for="xx-large" class="option-text">
                             <p>84</p>
                         </label>
-
                     </div>
 
 
@@ -274,8 +273,13 @@
                         </div>
                         <div class="form-check form-check-inline">
                             <input type="radio" name="radio2" value="value" class="radiobtn">
+                            <label class="form-check-label" for="inlineRadio2">Joint</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input type="radio" name="radio2" value="value" class="radiobtn">
                             <label class="form-check-label" for="inlineRadio2">Business</label>
                         </div>
+                        
                     </div>
 
 
@@ -309,13 +313,20 @@
                     <p class='subhead'>Percentage</p>
                     <p style="font-size: 13px; margin-top: -15px; margin-bottom: 10px; font-weight: bold; color:grey">
                         Adjust Slider or Type in the Percentage</p>
-                    <div class="container rangerr">
-                        <p><b>{{percentageValue}} %</b></p>
-                    </div>
+                        <div class="d-flex" style="gap:10px; justify-content: center;">
+                            <div class="rangerr">
+                                <p><b>{{percentageValue}} %</b></p>
+                            </div>
+                            <div class="amountt">
+                                <p><b>$ {{amountCalc}}</b></p>
+                            </div>
+                        </div>
+                        
 
                     <input type="range" [(ngModel)]="percentageValue" (input)="updatePercentage($event)" id="vol"
                         name="vol" min="5" max="35" list="tickmarks"
                         style="accent-color: #E42346; width: 100%; height: 5px;">
+                    <div></div>
                     <datalist id="tickmarks">
                         <option value="0" label="5%"></option>
                         <option value="15" label="10%"></option>
