Login Issue Solved

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -3,7 +3,7 @@
   width: 100vw;
   height: fit-content;
   // background-color: aqua;
-  z-index: -1;
+  // z-index: -1;
   position: absolute;
   background-image: url(../../assets/login_image/background.png);
   background-size: 100% 100%;
