--- a/src/app/credit-information/credit-information.component.html
+++ b/src/app/credit-information/credit-information.component.html
@@ -29,7 +29,7 @@
 
         <img class="car-card" src=..\assets\car1.png>
 
-        <h5 class="card-title" style="font-family: 'Inter';"><b>Application ID: UNE0348</b></h5>
+        <h5 class="card-title" style="font-family: Inter;"><b>Application ID: UNE0348</b></h5>
 
         <div class="package-details">
 
