--- a/src/app/car-sub-redesign/car-sub-redesign.component.html
+++ b/src/app/car-sub-redesign/car-sub-redesign.component.html
@@ -237,7 +237,7 @@
                     <div class="radio-body">
                         <div class="leasehire form-check form-check-inline" style="margin-left: -21px;">
                             <input type="radio" name="radio1" value="value" checked>
-                            <label class="form-check-label" for="inlineRadio1">Lease</label>
+                            <label class="form-check-label" for="inlineRadio1">Loan</label>
                         </div>
                         <div class="leasehire form-check form-check-inline">
                             <input type="radio" name="radio1" value="value">
