--- a/src/app/rm-homepage/homepage-upper/homepage-upper.component.html
+++ b/src/app/rm-homepage/homepage-upper/homepage-upper.component.html
@@ -3,7 +3,7 @@
     <div class="backgroundImage" (click)="close()">
         <div style="padding-top: 50px;">
             <div>
-                <h1 class="brandNameText">MERCEDES</h1>
+                <h1 class="brandNameText">UDC PORTAL</h1>
             </div>
             <div class="card find-your-car" style="position: absolute;">
                 <div class="card-body card-headers">
