--- a/src/app/home-screen/home-car-collec/home-car-collec.component.html
+++ b/src/app/home-screen/home-car-collec/home-car-collec.component.html
@@ -123,7 +123,7 @@
                 <img src={{car.imgUrl}}>
                 <div class="container">
                     <p style="font-weight: bold; font-size: 15px; margin-bottom: 6px;">{{car.name}}</p>
-                    <h4 style="font-family: Montserrat; font-weight:bold; color: #ED5434;">$ {{car.price}}</h4>
+                    <h4 style="font-family: Montserrat; font-weight:bold; color: #ED5434;"> {{car.price}}</h4>
                     <div class="smallblock">
                         <div class="smallsubblock text-center">
                             <img src="../../../assets/speedometer-01.png" style="height: 15px; width: auto; margin-bottom: 0;">
