--- a/src/app/home-screen/home-screen.component.html
+++ b/src/app/home-screen/home-screen.component.html
@@ -2,29 +2,29 @@
 <div class="backgroundImage">
     <div class="One">
         <div>
-            <h1 class="brandNameText">MERCEDES</h1>
+            <h1 class="brandNameText">UDC PORTAL</h1>
         </div>
-        <div class="twoDivFirst">
-            <div class="twoDivSecond">
+        <!-- <div class="twoDivFirst"> -->
+            <!-- <div class="twoDivSecond">
                 <div class="twoDivThird">2</div>
-            </div>
-            <div class="twoDivFourth">It has survived not only five centuries, but also the leap into electronic
-                typesetting, remaining essentially unchanged.</div>
-        </div>
-        <div class="firstDiv">
-            <div class="secondDiv">
+            </div> -->
+            <!-- <div class="twoDivFourth">It has survived not only five centuries, but also the leap into electronic
+                typesetting, remaining essentially unchanged.</div> -->
+        <!-- </div> -->
+        <!-- <div class="firstDiv"> -->
+            <!-- <div class="secondDiv">
                 <div class="thirdDiv">1</div>
-            </div>
-            <div class="fourthDiv">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                unknown printer took a galley of type and scrambled it to make a type specimen book.</div>
-        </div>
-        <div class="threeDivFrist">
-            <div class="threeDivSecond">
+            </div> -->
+            <!-- <div class="fourthDiv">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                unknown printer took a galley of type and scrambled it to make a type specimen book.</div> -->
+        <!-- </div> -->
+        <!-- <div class="threeDivFrist"> -->
+            <!-- <div class="threeDivSecond">
                 <div class="threeDivThird">3</div>
-            </div>
-            <div class="threeDivFourth">In addition to speeds, you'll also choose between manual and automatic
-                transmissions.</div>
-        </div>
+            </div> -->
+            <!-- <div class="threeDivFourth">In addition to speeds, you'll also choose between manual and automatic
+                transmissions.</div> -->
+        <!-- </div> -->
     </div>
     <div class="find-more-button-main">
         <div class="rounded border border-white flex-column justify-content-start align-items-start findMoreFirstDiv">
