--- a/src/app/workspace/workspace.component.html
+++ b/src/app/workspace/workspace.component.html
@@ -46,7 +46,7 @@
                     </div>
                 </form>
             </div>
-            <ag-grid-angular  style="width: 100%; height: 17.5rem; overflow: hidden;" class="ag-theme-alpine" [rowData]="rowData$ | async"
+            <ag-grid-angular  style="width: 100%; height: 17.5rem; overflow: hidden;" class="ag-theme-alpine" [rowData]="rowData$"
                 [columnDefs]="columnDefs" [defaultColDef]="gridOptions.defaultColDef" [rowHeight]="33" (cellClicked)="onCellClicked($event)">
             </ag-grid-angular>
             <img src="../../assets/logos/frame.png" style="width: 60rem; height: 1.2rem;
