--- a/src/app/car-sub-redesign/car-sub-redesign.component.html
+++ b/src/app/car-sub-redesign/car-sub-redesign.component.html
@@ -21,41 +21,6 @@
     </div>
     <div class="bodyclass">
         <div>
-            <!-- <div id="carouselExampleIndicators" class="carousel slide">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="{{techDetailsParameter.imgUrl}}" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../assets/Toyota-Fortuner-Interior 1.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../assets/toyota_fortuner_29 1.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../assets/car4.png" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1">
-                        <img src="{{techDetailsParameter.imgUrl}}" class="d-block w-100" alt="...">
-                    </button>
-                    <button id="middle1" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2">
-                        <img src="../../assets/Toyota-Fortuner-Interior 1.png" class="d-block w-100" alt="...">
-                    </button>
-                    <button id="middle2" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3">
-                        <img src="../../assets/toyota_fortuner_29 1.png" class="d-block w-100" alt="...">
-                    </button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                        aria-label="Slide 4">
-                        <img src="../../assets/car4.png" class="d-block w-100" alt="...">
-                    </button>
-                </div>
-            </div> -->
-
             <div class="car-images d-flex">
                 <div class="car-main-img">
                     <img src="{{techDetailsParameter.imgUrl}}" alt="car-img">
@@ -67,48 +32,6 @@
                 <div>
                 </div>
             </div>
-
-            <!-- <div class="leftcard my-3">
-                <div style="display: flex; justify-content: space-between; ">
-                    <div>
-                        <h2>{{techDetailsParameter.name}}</h2>
-                        <p class="mb-4">Engine Capacity {{specificaiton.engine_capacity}} · {{specificaiton.Fuel_Type}}
-                            · {{specificaiton.transmmission_type}} </p>
-                    </div>
-                    <div style="text-align: center;">
-                        <i style="font-size: 30px;" class="fa-regular fa-heart"></i>
-                        <p style="font-size: 13px;">1 Person <br>Shortlisted</p>
-                    </div>
-                </div>
-                <p style="font-size: 15px; font-family: Inter; color: #636363;">Select Variant <i
-                        class="fa-solid fa-chevron-down" style="margin-left: 5px;"></i></p>
-                <div class="coloraccessories">
-                    <div>
-                        <h3>Color</h3>
-                        <form>
-                            <button id="#45473D" class="redbtn btn"
-                                style="background-color: #45473D; outline: solid 2px #ffffff;"
-                                (click)="outline($event)"></button>
-                            <button id="#000000" class="redbtn btn"
-                                style="background-color: #000000; outline: solid 2px #ffffff;"
-                                (click)="outline($event)"></button>
-                            <button id="#DB2423" class="redbtn btn"
-                                style="background-color: #DB2423; outline: solid 2px #ffffff;"
-                                (click)="outline($event)"></button>
-                            <button id="#9f9f9f" class="redbtn btn"
-                                style="background-color: #9f9f9f; outline: solid 2px #ffffff;"
-                                (click)="outline($event)"></button>
-                        </form>
-                    </div>
-                    <div style="margin-left: -35px;">
-                        <h3 style="display: flex; align-items: center;">Car Accessories <span
-                                style="font-size: 12px; margin-left: 5px;">(optional)</span></h3>
-                        <img src="../../assets/logos/456.png" style="margin-right: 20px;">
-                        <img src="../../assets/logos/123.png">
-                    </div>
-
-                </div>
-            </div> -->
 
             <div class="left-card my-3 py-3 px-2 d-flex">
                 <div>
@@ -195,35 +118,18 @@
         </div>
         <div>
             <div class="rightcard">
-                <!-- <div class="card card-timeline border-0">
-                    <ul class="bs4-order-tracking">
-                        <li class="step">
-                            <div style="padding-top: 1px;"><i class="fa-solid fa-circle-dot" style="color: #db0000; font-size: 16px;"></i></div>
-                            <p class="activestep" style="margin-left: 30px;">Build Car</p>
-                        </li>
-                        <li class="step">
-                            <div style="padding-top: 1px;"><i class="fa-solid fa-circle-dot" style="color: #544c4c; font-size: 16px;"></i></div>
-                            <p style="margin-left: 22px;">Personal Info</p>
-                        </li>
-                        <li class="step">
-                            <div style="padding-top: 1px;"><i class="fa-solid fa-circle-dot" style="color: #544c4c; font-size: 16px;"></i></div>
-                            <p style="margin-left: 32px;">Payment</p>
-                        </li>
-                    </ul>
-                </div>
-                <hr style="margin-top: 0rem;"> -->
                 <p class="lc-header" (click)="onClick()">Subscription Type<i class="fa-solid"
                         [class.fa-angle-down]="isUpperVisible" [class.fa-angle-up]="!isUpperVisible"></i></p>
                 <div [style.display]="isUpperVisible ? 'inherit' : 'none'"
                     [style.height]="isUpperVisible ? 'fit-content' : '0'">
                     <div class="radio-body">
                         <div class="leasehire form-check form-check-inline" style="margin-left: -21px;">
-                            <input type="radio" name="radio1" value="value" checked>
-                            <label class="form-check-label" for="inlineRadio1">Lease</label>
+                            <input type="radio" name="radio1" value="Loan" checked>
+                            <label class="form-check-label" for="inlineRadio1">Loan</label>
                         </div>
                         <div class="leasehire form-check form-check-inline">
-                            <input type="radio" name="radio1" value="value">
-                            <label class="form-check-label" for="inlineRadio2">Hire Purchase</label>
+                            <input type="radio" name="radio1" value="HirePurchase">
+                            <label class="form-check-label" for="inlineRadio1">Hire Purchase</label>
                         </div>
                     </div>
 
@@ -231,18 +137,12 @@
                     <p style="font-weight: bold; font-size: 13px; color: grey; margin-top: -15px;">Select Preferred
                         Tenure</p>
                     <div class="numbers select-size">
-                        <!-- <button class="btn numbtn">24</button>
-                        <button class="btn numbtn">36</button>
-                        <button class="btn numbtn" style="border: solid 2px #DB2423; color: #DB2423;">48</button>
-                        <button class="btn numbtn">60</button>
-                        <button class="btn numbtn">72</button>
-                        <button class="btn numbtn">84</button> -->
-                        <!-- <button class="btn btn-white border border-1 border-black">84</button> -->
                         <input class="numbtn" type="radio" name="s-size" id="small" />
                         <input class="numbtn" type="radio" name="s-size" id="medium" />
                         <input class="numbtn" type="radio" name="s-size" id="large" checked/>
                         <input class="numbtn" type="radio" name="s-size" id="x-large" />
                         <input class="numbtn" type="radio" name="s-size" id="xx-large" />
+                        <input class="numbtn" type="radio" name="s-size" id="xtra-large" />
 
                         <label for="small" class="option-text">
                             <p>24</p>
@@ -259,7 +159,7 @@
                         <label for="xx-large" class="option-text">
                             <p>72</p>
                         </label>
-                        <label for="xx-large" class="option-text">
+                        <label for="xtra-large" class="option-text">
                             <p>84</p>
                         </label>
                     </div>
@@ -283,23 +183,6 @@
                     </div>
 
 
-                    <!-- <p class='subhead'>Mileage Package</p>
-                    <div class="radio-body">
-                        <div class="form-check form-check-inline" style="margin-left: -18px;">
-                            <input type="radio" name="radio3" value="value" class="radiobtn" checked>
-                            <label class="form-check-label" for="inlineRadio1">Low Usage</label>
-                        </div>
-                        <div class="form-check form-check-inline">
-                            <input type="radio" name="radio3" value="value" class="radiobtn">
-                            <label class="form-check-label" for="inlineRadio2">Moderate Usage</label>
-                        </div>
-                        <div class="form-check " style="margin-left: 6px;">
-                            <input type="radio" name="radio3" value="value" class="radiobtn">
-                            <label class="form-check-label" for="inlineRadio2">High Usage</label>
-                        </div>
-                    </div> -->
-
-
                     <div class="d-flex" style="align-items: baseline;">
                         <p class='subhead'>Buyback</p>
                         <div class="form-check form-switch" style="margin-left: 35px;">
@@ -310,17 +193,26 @@
                     </div>
 
 
-                    <p class='subhead'>Percentage</p>
-                    <p style="font-size: 13px; margin-top: -15px; margin-bottom: 10px; font-weight: bold; color:grey">
-                        Adjust Slider or Type in the Percentage</p>
-                        <div class="d-flex" style="gap:10px; justify-content: center;">
-                            <div class="rangerr">
-                                <p><b>{{percentageValue}} %</b></p>
+                    <!-- <p class='subhead'>Percentage</p> -->
+                        <div class="fields" style="display: flex;">
+                            <p>Downpayment : </p>
+                            <input type="text" placeholder="$0.00">
+                        </div>
+                        <p style="font-size: 11px; margin-top: -7px; margin-bottom: 10px; font-weight: bold; color:grey">
+                            Maximum amount should be: $ {{maxDownPayment}}</p>
+                    
+                        <div class="d-flex perAm" style="gap:10px; justify-content: space-between;">
+                            <div class="d-flex">
+                                <p><b>Percentage: </b></p>
+                                <p class="rangerr"><b>{{percentageValue}} %</b></p>
                             </div>
-                            <div class="amountt">
-                                <p><b>$ {{amountCalc}}</b></p>
+                            <div class="d-flex">
+                                <p><b>Amount: </b></p>
+                                <p class="amountt"><b>$ {{amountCalc}}</b></p>
                             </div>
                         </div>
+                        <p style="font-size: 11px; margin-top: -10px; margin-bottom: 10px; font-weight: bold; color:grey">
+                            Adjust Slider or Type in the Percentage</p>
                         
 
                     <input type="range" [(ngModel)]="percentageValue" (input)="updatePercentage($event)" id="vol"
@@ -336,10 +228,10 @@
                         <option value="75" label="30%"></option>
                         <option value="100" label="35%"></option>
                     </datalist>
-                    <div class="container text-center mt-3">
+                    <!-- <div class="container text-center mt-3">
                         <button class="btn btn-secondary buybtn mb-2" style="justify-content: center;">Buy Back Pack
                             Amount</button>
-                    </div>
+                    </div> -->
                 </div>
                 <hr>
                 <p class="lc-header" (click)="onPress()">Eligibility<i class="fa-solid"
@@ -393,7 +285,7 @@
                     <p style="color: #db0000; font-size: 14px; font-family: Inter;"><b><U>SWITCH MODEL</U></b></p>
                     <div style="display: flex; gap: 10px;">
                         <div class="small-card">
-                            <img src="../../assets/Cars/carr1.png">
+                            <img src={{techDetailsParameter.imgUrl}}>
                         </div>
                         <div class="small-card">
                             <img src="../../assets/Cars/carr2.png">
