--- a/src/app/car-sub-redesign/car-sub-redesign.component.scss
+++ b/src/app/car-sub-redesign/car-sub-redesign.component.scss
@@ -11,7 +11,7 @@ img {
 }
 
 .stepper {
-    margin-right: 0.5rem;
+    // margin-right: 0.5rem;
 }
 
 .progress-bar {
@@ -140,32 +140,7 @@ img {
     background-size: 48rem 25rem !important;
 }
 
-.carousel-inner {
-    height: 25rem;
-    // border: solid 1px rgb(222, 214, 214);
-    border-radius: 5px;
-}
 
-.carousel-item img {
-    height: 25rem;
-    width: auto;
-    border-radius: 5px;
-}
-
-.carousel-indicators {
-    width: 48rem;
-    margin: 0px;
-}
-
-.carousel-indicators button {
-    width: 12rem;
-    height: 6rem;
-}
-
-.carousel-indicators img {
-    height: 6rem;
-    border-radius: 4px;
-}
 
 .leftcard {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -249,16 +224,18 @@ img {
 }
 
 .rightcard {
-    width: 27.5rem;
+    min-width: 33vw;
+    max-width: 33vw;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     border-radius: 5px;
     padding: 1.5rem;
     font-family: "Montserrat";
     color: black;
-    height: 53rem;
+    height: 47rem;
     overflow-y: scroll;
     overflow-x: scroll;
     overflow-x: scroll;
+    margin-bottom: 1rem;
 }
 
 .rightcard hr {
@@ -355,18 +332,18 @@ img {
 }
 
 .fields p {
-    width: 160px;
+    width: 170px;
     font-size: 14px;
     font-weight: bold;
     margin-top: 15px;
 }
 
-.fields input {
+.fields input, .downpayment input{
     height: 1.75rem;
     margin-top: 10px;
     padding: 0 10px;
     padding: 0 10px;
-    width: 40%;
+    width: 50%;
     border: solid 1px rgb(211, 206, 206);
     border-radius: 4px;
     font-size: 11px;
@@ -374,6 +351,19 @@ img {
     border-radius: 4px;
     font-size: 13px;
     font-weight: bold;
+}
+
+.downpayment{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.downpayment input{
+    font-size: 13px;
+    width: 60%;
+
 }
 
 .numbers {
@@ -444,11 +434,11 @@ img {
     z-index: -1
 }
 
-.perAm{
+.perAm {
     margin-top: 20px;
 }
 
-.perAm p{
+.perAm p {
     font-size: 14px;
     margin-right: 15px;
     padding-top: 2px;
@@ -508,7 +498,8 @@ img {
     border-radius: 10px;
 }
 
-.rangerr , .amountt{
+.rangerr,
+.amountt {
     height: 26px;
     border-radius: 1px;
     border: solid 1px rgb(226, 222, 222);
@@ -523,7 +514,7 @@ img {
     }
 }
 
-.amountt{
+.amountt {
     width: 120px;
 }
 
@@ -579,21 +570,31 @@ datalist option {
 
 //==================================================================================================
 
+.car-images{
+    display: flex;
+    justify-content: space-around;
+    gap: 10px;
+}
+
 .car-main-img {
     border: none;
 }
 
 .car-main-img img {
-    width: 33rem;
-    height: 20rem;
+    width: auto;
+    max-width: 32.4rem;
+    height: 47vh;
     flex-shrink: 0;
-    border-radius: 16px;
+    border-radius: 5px;
     // border: none;
 }
 
 .car-etc-img-div img {
-    height: 9rem;
-    margin-bottom: 1.5rem;
+    height: 8.8rem;
+    // width: auto;
+    max-width: 15rem;
+    margin-bottom: 1rem;
+    border-radius: 5px;
 }
 
 .car-details h2 {
@@ -734,7 +735,7 @@ datalist option {
     width: 3rem;
 }
 
-#engine{
+#engine {
     margin-right: 1rem;
     height: 3rem;
     width: 3rem;
@@ -801,11 +802,11 @@ datalist option {
     border: 1px solid red;
 }
 
-.option-text p{
+.option-text p {
     margin-top: 0.9rem;
 }
 
-.select-var-div{
+.select-var-div {
     font-family: Inter;
     font-weight: 500;
     font-size: 1rem;
