--- a/src/app/how-it-works/how-it-works.component.html
+++ b/src/app/how-it-works/how-it-works.component.html
@@ -28,7 +28,7 @@
                 <div class="shadow-box">
                     <img width="66" height="66" src="../../assets/square_icon.png">
                 </div>
-                <div class="browsSelect">Browse and Select</div>
+                <div class="browsSelect">Book and Confirm</div>
                 <div class="box-text">
                     Aliquam erat volutpat. Integer malesuada turpis id fringilla suscipit. Maecenas ultrices, orci vitae
                     convallis mattis.</div>
@@ -42,7 +42,7 @@
                 <div class="shadow-box">
                     <img width="66" height="66" src="../../assets/car_icon.png">
                 </div>
-                <div class="browsSelect">Book and Confirm</div>
+                <div class="browsSelect">Enjoy your ride</div>
                 <div class="box-text">
                     Aliquam erat volutpat. Integer malesuada turpis id fringilla suscipit. Maecenas ultrices, orci vitae
                     convallis mattis.</div>
