--- a/src/app/car-subs/car-subs.component.scss
+++ b/src/app/car-subs/car-subs.component.scss
@@ -132,7 +132,9 @@ img {
     width: 48rem;
     height: 32rem;
 }
-
+#home{
+    cursor: pointer;
+}
 #demo{
     height: 25rem !important;
     width: auto !important;
