--- a/src/app/car-sub-redesign/car-sub-redesign.component.html
+++ b/src/app/car-sub-redesign/car-sub-redesign.component.html
@@ -252,8 +252,8 @@
                     </div> -->
                 </div>
                 <hr>
-                <p class="lc-header" (click)="onPress()">Eligibility<i class="fa-solid"
-                        [class.fa-angle-down]="isLowerVisible" [class.fa-angle-up]="!isLowerVisible"></i></p>
+                <p class="lc-header" (click)="onPress()">Eligibility
+                    <i class="fa-solid"[class.fa-angle-down]="isLowerVisible" [class.fa-angle-up]="!isLowerVisible"></i></p>
                 <div [style.display]="isLowerVisible ? 'inherit' : 'none'"
                     [style.height]="isLowerVisible ? 'fit-content' : '0'">
                     <div class="radio-body">
