--- a/src/app/apply-now-pending/apply-now-pending.component.html
+++ b/src/app/apply-now-pending/apply-now-pending.component.html
@@ -9,13 +9,13 @@
           <div class="d-flex" style="justify-content: space-between;">
             <div class="package-details">
                 <p><b>Your chosen package:</b> </p>
-                <p style="color: #DB2423;"><b>Your current instalment is:</b></p>
+                <p style="color: #DB2423;"><b>Your current installment is:</b></p>
                 <p ><b>Your Total Amount of Finance</b></p>
                 <p >Down Payment</p>
                 <p >Repayment Frequency </p>
                 <p >APR of</p>
-                <p >Add on (instalment)</p>
-                <p ><b>Your Final Instalment is</b></p>
+                <p >Add on (installment)</p>
+                <p ><b>Your Final Installment is</b></p>
                 <p >Your first payment is</p>
             </div>
             <div class="package-details">
