--- a/src/app/approved/approved.component.html
+++ b/src/app/approved/approved.component.html
@@ -13,7 +13,7 @@
             <div class="package-details">
                 <p style="font-family: 'Monts';"><b>Your chosen package: </b></p>
         
-                <p style="font-family: 'Monts'; color: #ED5434;"><b>Your current instalment is: per month</b></p>
+                <p style="font-family: 'Monts'; color: #ED5434;"><b>Your current installment is: per month</b></p>
         
                 <p style="font-family: 'Monts'; font-family: 'Inter';"><b>Your Total Amount of Finance</b></p>
         
@@ -23,9 +23,9 @@
         
                 <p style="font-family: 'Monts';">APR of</p>
         
-                <p style="font-family: 'Monts';">Add on (instalment)</p>
+                <p style="font-family: 'Monts';">Add on (installment)</p>
         
-                <p style="font-family: 'Monts'; font-family: 'Inter';"><b>Your Final Instalment is</b></p>
+                <p style="font-family: 'Monts'; font-family: 'Inter';"><b>Your Final Installment is</b></p>
         
                 <p style="font-family: 'Monts';">Your first payment is</p>
         
