status change issue fix

--- a/src/app/apply-now-pending/apply-now-pending.component.html
+++ b/src/app/apply-now-pending/apply-now-pending.component.html
@@ -107,6 +107,6 @@
         <button class="btn" (click)="redirect('work-space')">BACK</button>
     </div>
     <div class="cs-footer-com">
-        <button class="btn" (click)="redirect('work-space')">SUBMIT</button>
+        <button class="btn" (click)="onSubmit()">SUBMIT</button>
     </div>
 </div>
